<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_list"
    android:padding="@dimen/margin_size_10" >

    <LinearLayout
        android:id="@+id/ll_ticketid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_ticketid"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:id="@+id/txt_ticketid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_ticketid"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_size_5"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_Mobile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:id="@+id/txt_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_mobile"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_size_5"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_identifier"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:id="@+id/txt_identifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_starttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_identifier"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_size_5"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_startdate"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />

        <TextView
            android:id="@+id/txt_startdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_15" />
    </LinearLayout>

</RelativeLayout>