<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_size_10"
            android:gravity="center"
            android:text="Please Wait..." />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Reading Card Data." />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/on_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone" >

        <EditText
            android:id="@+id/edit_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_10"
            android:background="@drawable/add_bg_border_age"
            android:gravity="left"
            android:hint="Mobile No"
            android:padding="@dimen/margin_size_6"
            android:textSize="@dimen/margin_size_20" >
        </EditText>

        <EditText
            android:id="@+id/edit_identity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_mobile"
            android:layout_margin="@dimen/margin_size_10"
            android:background="@drawable/add_bg_border_age"
            android:gravity="left"
            android:hint="Unique identifier"
            android:padding="@dimen/margin_size_6"
            android:textSize="@dimen/margin_size_20" >
        </EditText>

        

        <Spinner
            android:id="@+id/spinner_class"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/margin_size_40"
            android:layout_below="@+id/edit_identity"
            android:layout_margin="@dimen/margin_size_10"
            android:background="@drawable/add_bg_border_age"
            android:spinnerMode="dropdown"
            android:gravity="left"
            android:hint="Class"
            android:padding="@dimen/margin_size_6"
            android:textSize="@dimen/margin_size_20"
             />
      

        <Button
            android:id="@+id/book_space_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_class"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_size_8"
            android:background="@color/btn_bg"
            android:padding="@dimen/margin_size_10"
            android:text="BOOK SPACE" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/on_exist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_20"
            android:text="@string/txt_exit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/txt_cust_mob"
            android:textSize="@dimen/margin_size_15"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/cust_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:text=""
            android:textColor="@color/color_red_yello" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/cust_mob"
            android:layout_marginTop="@dimen/margin_size_15"
            android:text="@string/txt_unique_id"
            android:textSize="@dimen/margin_size_15"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/unique_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:text=""
            android:textColor="@color/color_red_yello" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/unique_id"
            android:layout_marginTop="@dimen/margin_size_15"
            android:text="@string/txt_time"
            android:textSize="@dimen/margin_size_15"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginBottom="@dimen/margin_size_20"
            android:text=""
            android:textColor="@color/color_red_yello" />

        <Button
            android:id="@+id/end_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_size_20"
            android:background="@color/btn_disable"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_size_5"
            android:text="END THE SESSION" />
    </RelativeLayout>

</RelativeLayout>